fix text alignment of header

--- a/resources/assets/less/uniform-builder.less
+++ b/resources/assets/less/uniform-builder.less
@@ -439,6 +439,7 @@ div.navbar-header {
 
 #header_text {
     color: @text_color;
+    font-size: 2.2em;
 }
 
 .navbar-default {
@@ -1419,7 +1420,7 @@ img.highlighter {
 }
 
 .user-profile { 
-    margin-top: -47px;
+    margin-top: -52px;
     margin-right: 10px;
 }
 
